[package]
name = "dioxus-audio-events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "ssh://git@github.com/erichulburd/dioxus.git", rev = "5ea52aaea4f807192f8e0f7a5e76c5baaf86bdd9" }
dioxus-web = { git = "ssh://git@github.com/erichulburd/dioxus.git", rev = "5ea52aaea4f807192f8e0f7a5e76c5baaf86bdd9" }
